--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
             />
           </li>
           <li class="gallerey-list__item">
-            <img src="/images/books.png" loading="lazy" alt="Книги" />
+            <img src="./images/books.png" loading="lazy" alt="Книги" />
           </li>
           <li class="gallerey-list__item">
-            <img src="/images/street.png" loading="lazy" alt="Улица" />
+            <img src="./images/street.png" loading="lazy" alt="Улица" />
           </li>
         </ul>
       </section>
